--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,5 @@
-/* RIT COLORS:
-https://www.rit.edu/marketing/brandportal/brand-elements/colors
-ORANGE: #F76902
-
-OLD:
-* ORANGE: #F36E21
-* BROWN:  #513127
+/* UMBC COLORS:
+https://styleguide.umbc.edu/umbc-colors/
 */
 
 /* Structural Changes */
@@ -35,10 +30,10 @@ footer {
     flex-shrink: 0;
 }
 
-/* Add some RIT Orange */
+/* Add some UMBC Gold */
 .btn-primary {
-    background-color: #F76902;
-    border-color: #F76902;
+    background-color: #FDB515;
+    border-color: #FDB515;
 }
 .btn-primary:hover {
     background-color: black;
@@ -53,7 +48,7 @@ a .icon-orange:hover {
     color: black;
 }
 #home-about {
-    background-color: #F76902;
+    background-color: #A67A05;
     color: white;
 }
 #home-about hr {
@@ -79,10 +74,10 @@ footer li {
     list-style: none;
 }
 footer a {
-    color: #B3B3FF;
+    color: #636466;
     text-decoration: underline;
 }
 footer a:hover {
-    color: #B3B3FF;
+    color: #636466;
     text-decoration: none;
 }
