try adding umbc colors to icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ footer {
     color: #D95E00;
 }*/
 .icon-orange {
-    color: #D95E00;
+    color: #A67A05;
 }
 a .icon-orange:hover {
     color: black;
