try adding different umbc colors to header

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,8 @@ a .icon-orange:hover {
     color: black;
 }
 #home-about {
-    background-color: #A67A05;
-    color: white;
+    background-color: #FDB515;
+    color: black;
 }
 #home-about hr {
     border-top: 1px solid rgba(255,255,255,.3);
