make website format match umbc needs

--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -13,10 +13,10 @@
                 </ul>
             </div>
             <div class="col-12 col-md-4 col-lg-3">
-                <p><strong>RIT</strong></p>
+                <p><strong>UMBC</strong></p>
                 <ul>
-                    <!-- RIT footer links -->
-                    {% for item in site.data.footer.rit %}
+                    <!-- UMBC footer links -->
+                    {% for item in site.data.footer.umbc %}
                     <li>
                         <a href="{{ item.link }}">{{ item.name }}</a>
                     </li>
@@ -34,23 +34,12 @@
                     {% endfor %}
                 </ul>
             </div>
-            <div class="col-12 col-md-4 col-lg-3">
-                <p><strong>Feeds</strong></p>
-                <ul>
-                    <!-- feeds -->
-                    {% for item in site.data.footer.feeds %}
-                    <li>
-                        <a href="{{ item.link }}">{{ item.name }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
         </div>
         <div class="row">
             <div class="col-12">
                 <p>
                     <strong>Site Information:</strong><br />
-                    With the exception of posts and talks (whose copyrights are held by their creators and not RITlug), site content is under a CC0 1.0 Universal license.
+                    With the exception of posts and talks (whose copyrights are held by their creators and not the UMBC LUG), site content is under a CC0 1.0 Universal license. (mention that the design is forked from RITlug)
                 </p>
             </div>
         </div>
